--- a/package.json
+++ b/package.json
@@ -13,31 +13,33 @@
     "@xstate/immer": "^0.3.2",
     "@xstate/react": "^3.2.1",
     "clsx": "^1.2.1",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.10.0",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "framer-motion": "^10.12.2",
     "howler": "^2.2.3",
     "lodash-es": "^4.17.21",
-    "next": "13.2.4",
+    "next": "^13.3.0",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "tiny-invariant": "^1.3.1",
-    "typescript": "5.0.3",
-    "xstate": "^4.37.1"
+    "typescript": "^5.0.4",
+    "xstate": "^4.37.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.0.7",
-    "@iconify/json": "^2.2.44",
+    "@iconify/json": "^2.2.50",
     "@tailwindcss/typography": "^0.5.9",
     "@types/howler": "^2.2.7",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.32",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1"
   }
 }
